force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Account__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The debitor organisation.</description>
    <inlineHelpText>The debitor organisation.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recurring Payments</relationshipLabel>
    <relationshipName>Recurring_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>