force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Active__c.field-meta.xml
<CustomField>
    <fullName>cpm__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicated whether the Recurring Payment is active. This field is not automatically updated. this needs to be implemented by the Implementing Partner.</description>
    <inlineHelpText>If checked this Recurring Payment is included in payment runs.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>