force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Contact__c.field-meta.xml
<CustomField>
    <fullName>cpm__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The debitor. (person)</description>
    <inlineHelpText>The debitor.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recurring Payments</relationshipLabel>
    <relationshipName>Recurring_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>