force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Custom_Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Custom_Account_Holder_Name__c</fullName>
    <label>Custom Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>