force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Custom_IBAN__c.field-meta.xml
<CustomField>
    <fullName>cpm__Custom_IBAN__c</fullName>
    <label>Custom Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>