force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__End_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__End_Date__c</fullName>
    <description>The date on which the Recurring Payment ends. After this date the Active checkbox should be set to inactive.</description>
    <inlineHelpText>The date on which the Recurring Payment ends.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>