force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__End_Date_Reached__c.field-meta.xml
<CustomField>
    <fullName>cpm__End_Date_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in a trigger and is set when Next Collection Date is greater than End Date. If true this checkbox is checked and field update will be prevented</description>
    <label>End Date Reached</label>
    <type>Checkbox</type>
</CustomField>