force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Final_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__Final_Payment_Reference__c</fullName>
    <description>The payment reference for this Recurring Payment.</description>
    <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Payment_Reference__c ) ) , cpm__Custom_Payment_Reference__c , cpm__Generated_Payment_Reference__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The payment reference for this Recurring Payment.</inlineHelpText>
    <label>Final Payment Reference</label>
    <type>Text</type>
</CustomField>