force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Frequency__c.field-meta.xml
<CustomField>
    <fullName>cpm__Frequency__c</fullName>
    <description>The billing cycle for this Recurring Payment. every billing cycle a installment is created to facilitate collection.</description>
    <inlineHelpText>How often this Recurring Payment should be collected.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Twice a year</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>