force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Generated_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__Generated_Payment_Reference__c</fullName>
    <description>The auto generated payment reference.</description>
    <externalId>true</externalId>
    <inlineHelpText>The auto generated payment reference.</inlineHelpText>
    <label>Generated Payment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>