force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__ls_coll_date__c.field-meta.xml
<CustomField>
    <fullName>cpm__ls_coll_date__c</fullName>
    <description>The last time this Recurring Payment was processed in a payment run and had a installment created.</description>
    <inlineHelpText>The last date this Recurring Payment was included in a payment run.</inlineHelpText>
    <label>Last Collection Date</label>
    <type>Date</type>
</CustomField>