force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__n_of_collected_installments__c.field-meta.xml
<CustomField>
    <fullName>cpm__n_of_collected_installments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of collected installments</description>
    <label># of collected installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>