force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Name__c</fullName>
    <description>The name of the debitor. whether it be a Organisation or a Contact.</description>
    <formula>IF (ISBLANK(cpm__Account__c) , cpm__Contact__r.FirstName + &apos; &apos; + cpm__Contact__r.LastName , cpm__Account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the debitor.</inlineHelpText>
    <label>Name</label>
    <type>Text</type>
</CustomField>