force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Next_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Next_Collection_Date__c</fullName>
    <description>The date this Recurring Payment is supposed to be collected.</description>
    <inlineHelpText>The date this Recurring Payment is supposed to be collected.</inlineHelpText>
    <label>Next Collection Date</label>
    <type>Date</type>
</CustomField>