force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Originating_Campaign__c.field-meta.xml
<CustomField>
    <fullName>cpm__Originating_Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The campaign that is primarily repsonsible for obtaining this Recurring Payment from the debitor.</description>
    <inlineHelpText>The campaign that led to this Recurring Payment.</inlineHelpText>
    <label>Originating Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Recurring Payments</relationshipLabel>
    <relationshipName>Recurring_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>