force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Payment_Profile__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contains information like a Credit Card reference, or an IBAN.</description>
    <inlineHelpText>Select the payment profile containing the information required to complete the payments. Such as an IBAN.</inlineHelpText>
    <label>Payment Profile</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
        <filterItems>
            <field>cpm__Payment_Profile__c.cpm__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.cpm__Contact__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>cpm__Payment_Profile__c.cpm__Contact__c</field>
            <operation>equals</operation>
            <valueField>$Source.cpm__Contact__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.cpm__Account__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>cpm__Payment_Profile__c.cpm__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.cpm__Account__c</valueField>
        </filterItems>
        <infoMessage>By default only active records are shown.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>cpm__Payment_Profile__c</referenceTo>
    <relationshipLabel>Recurring Payments</relationshipLabel>
    <relationshipName>Recurring_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>