force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Recount_collected_installments__c.field-meta.xml
<CustomField>
    <fullName>cpm__Recount_collected_installments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this checkbox manually triggers a recount of the number of collected installments field.</description>
    <inlineHelpText>Checking this checkbox manually triggers a recount of the number of collected installments field.</inlineHelpText>
    <label>Recount collected installments</label>
    <type>Checkbox</type>
</CustomField>