force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Setup_URL__c.field-meta.xml
<CustomField>
    <fullName>cpm__Setup_URL__c</fullName>
    <description>A URL to a payment page where the payer can update how the recurring payment will be paid. The update can change, for example, payment method and processor, mandate, payment profile and payment reference.</description>
    <inlineHelpText>A URL to a payment page where the payer can update how the recurring donation will be paid.</inlineHelpText>
    <label>Setup URL</label>
    <type>Url</type>
</CustomField>