force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The start date for this Recurring Payment.</description>
    <inlineHelpText>The start date for this Recurring Payment.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>