force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Status__c</fullName>
    <description>The current status of this Recurring Payment.</description>
    <inlineHelpText>The current status of this Recurring Payment.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Not validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>