force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>cpm__Status_Reason__c</fullName>
    <description>Can contain details on why the current status has a particular value. for example: inactive, reason: debitor passed away.</description>
    <inlineHelpText>Details on why the Recurring Payment has the current status.</inlineHelpText>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>