force-app/main/default/objects/cpm__Recurring_Payment__c/fields/cpm__Yearly_value__c.field-meta.xml
<CustomField>
    <fullName>cpm__Yearly_value__c</fullName>
    <description>Calculates the revenue per year based on the Amount * the Frequency.</description>
    <formula>cpm__Amount__c * CASE(TEXT( cpm__Frequency__c ), &quot;One-time&quot;, 1, &quot;Monthly&quot;, 12, &quot;Quarterly&quot;, 4, &quot;Twice a year&quot;, 2, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How much the Recurring Payment creates in revenue each year.</inlineHelpText>
    <label>Yearly value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>