force-app/main/default/objects/cpm__Recurring_Payment__c/validationRules/cpm__Account_or_Contact_should_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Account_or_Contact_should_be_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(cpm__Account__c), ISBLANK(cpm__Contact__c))</errorConditionFormula>
    <errorMessage>An Account or Contact needs to be selected</errorMessage>
</ValidationRule>