force-app/main/default/objects/cpm__Recurring_Payment__c/validationRules/cpm__Default_Bank_Statement_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Default_Bank_Statement_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( ISBLANK ( cpm__Bank_Statement_Description__c ) , true , false )</errorConditionFormula>
    <errorDisplayField>cpm__Bank_Statement_Description__c</errorDisplayField>
    <errorMessage>Default Bank Statement Description is required</errorMessage>
</ValidationRule>