force-app/main/default/objects/cpm__Recurring_Payment__c/validationRules/cpm__Frequency_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Frequency_is_required</fullName>
    <active>true</active>
    <description>Frequency is a required field on all commitments.</description>
    <errorConditionFormula>ISPICKVAL(cpm__Frequency__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>cpm__Frequency__c</errorDisplayField>
    <errorMessage>Frequency is a required field.</errorMessage>
</ValidationRule>