force-app/main/default/objects/cpm__Recurring_Payment__c/validationRules/cpm__IBAN_with_direct_debit.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__IBAN_with_direct_debit</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( cpm__Payment_Method__c , &quot;Direct Debit&quot;), 
OR(  cpm__Payment_Profile__r.RecordType.DeveloperName == &quot;IBAN&quot;, cpm__Payment_Profile__r.RecordType.DeveloperName == &quot;Legacy_Bank_Account&quot; ) )</errorConditionFormula>
    <errorDisplayField>cpm__Payment_Profile__c</errorDisplayField>
    <errorMessage>A IBAN or bank account is required with payment method &quot;Direct Debit&quot;</errorMessage>
</ValidationRule>