force-app/main/default/objects/cpm__Recurring_Payment__c/validationRules/cpm__Payment_Method_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Payment_Method_Required</fullName>
    <active>true</active>
    <description>A payment method is required for every Recurring Payment.</description>
    <errorConditionFormula>ISPICKVAL(  cpm__Payment_Method__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>cpm__Payment_Method__c</errorDisplayField>
    <errorMessage>Payment Method is a required field.</errorMessage>
</ValidationRule>