force-app/main/default/objects/cpm__Recurring_Payment__c/validationRules/cpm__Payment_Processor_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Payment_Processor_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>IF ( ISBLANK ( TEXT(cpm__Payment_Processor__c) ) , true , false )</errorConditionFormula>
    <errorDisplayField>cpm__Payment_Processor__c</errorDisplayField>
    <errorMessage>Payment Processor is a required field</errorMessage>
</ValidationRule>