force-app/main/default/objects/cpm__Recurring_Payment__c/validationRules/cpm__Status_required.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Status_required</fullName>
    <active>true</active>
    <description>The status is required for every Recurring Payment.</description>
    <errorConditionFormula>ISPICKVAL( cpm__Status__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>cpm__Status__c</errorDisplayField>
    <errorMessage>Status is a required field</errorMessage>
</ValidationRule>