force-app/main/default/objects/cpm__Recurring_Payment__c/listViews/cpm__All.listView-meta.xml
<ListView>
    <fullName>cpm__All</fullName>
    <columns>NAME</columns>
    <columns>cpm__Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>cpm__Amount__c</columns>
    <columns>cpm__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>